Added banana as a unit

--- a/WeightConverter/index.html
+++ b/WeightConverter/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Josefin+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" href="style.css">
   <title>Weight Converter</title>
@@ -13,7 +14,8 @@
         <h1 class="display-4 text-center mb-3">Weight Converter</h1>
         <form>
           <div class="form-group">
-            <input id="lbsInput" type="number" class="form-control form-control-lg" placeholder="Enter Pounds...">
+            <label for="pounds">Enter Pounds: </label>
+            <input id="lbsInput" type="number" class="form-control form-control-lg">
           </div>
         </form>
         <div id="output">
@@ -29,10 +31,18 @@
               <div id="kgOutput"></div>
             </div>
           </div>
-          <div class="card ounces">
+          <div class="card ounces  mb-2">
             <div class="card-block">
               <h4>Ounces:</h4>
               <div id="ozOutput"></div>
+            </div>
+          </div>
+          <div class="card-bananas">
+            <div class="card-block">
+              <h4>Bananas:</h4>
+              <img class="banana-gif" src="banana.gif" alt="banana">
+              <img class="banana-img" src="banana.png" alt="banana">
+              <div id="bananaOutput"></div>
             </div>
           </div>
         </div>
