--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -1,1 +1,9 @@
-<canvas id='canvas' width="608" height="608"></canvas>
+<!DOCTYPE html>
+<head>
+  <title>Snake Game</title>
+</head>
+<body>
+  <canvas id='canvas' width="608" height="608"></canvas>
+</body>
+</html>
+
