--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -3,7 +3,8 @@
   <title>Snake Game</title>
 </head>
 <body>
-  <canvas id='canvas' width="608" height="608"></canvas>
+  <canvas id="snake" width="608" height="608"></canvas>
+  <script src="snake.js"></script>
 </body>
 </html>
 
