--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <head>
   <title>Snake Game</title>
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <canvas id="snake" width="608" height="608"></canvas>
-  <script src="snake.js"></script>
+  <div class="container">
+    <h2>Snake Game</h1>
+    <canvas id="snake" width="608" height="608"></canvas>
+    <script src="snake.js"></script>
+  </div>
 </body>
 </html>
 
