added more styling

--- a/SnakeGame/index.html
+++ b/SnakeGame/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
   <title>Snake Game</title>
-  <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Patrick+Hand" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
   <div class="container">
-    <h2>Snake Game</h1>
+    <h2>SNAKE GAME</h1>
     <canvas id="snake" width="608" height="608"></canvas>
     <script src="snake.js"></script>
   </div>
