--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -5,9 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <link rel="stylesheet" href="style.css">
+  <script src="jquery-1.10.2.min.js"></script>
   <title>ImageSlider</title>
 </head>
 <body>
-
+  <div class="slider">
+    <div class="slide s1 active"></div>
+    <div class="slide s2"></div>
+    <div class="slide s3"></div>
+    <div class="slide s4"></div>
+  </div>
 </body>
+<script src="javascript.js" "></script>
 </html>
