--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -15,6 +15,10 @@
     <div class="slide s2"></div>
     <div class="slide s3"></div>
     <div class="slide s4"></div>
+    <div class="slide s5"></div>
+    <div class="slide s6"></div>
+    <div class="slide s7"></div>
+    <div class="slide s8"></div>
   </div>
 </body>
 <script src="javascript.js"></script>
