--- a/ImageSlider/index.html
+++ b/ImageSlider/index.html
@@ -6,19 +6,23 @@
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
   <link rel="stylesheet" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <title>ImageSlider</title>
+  <title>Image Slider</title>
 </head>
 <body>
-  <div class="box"></div>
-  <div class="slider">
-    <div class="slide s1 active"></div>
-    <div class="slide s2"></div>
-    <div class="slide s3"></div>
-    <div class="slide s4"></div>
-    <div class="slide s5"></div>
-    <div class="slide s6"></div>
-    <div class="slide s7"></div>
-    <div class="slide s8"></div>
+  <div class="wrap">
+    <div id="arrow-left" class="arrow"></div>
+    <div class="box"></div>
+    <div class="slider">
+<!--       <div class="slide s1 active"></div> -->
+      <div class="slide s1"></div>
+      <div class="slide s2"></div>
+      <div class="slide s3"></div>
+      <div class="slide s4"></div>
+      <div class="slide s5"></div>
+      <div class="slide s6"></div>
+      <div class="slide s7"></div>
+      <div class="slide s8"></div>
+    </div>
   </div>
 </body>
 <script src="javascript.js"></script>
