--- a/TetrisGame/index.html
+++ b/TetrisGame/index.html
@@ -1,7 +1,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Tetris Game</title>
+  <title>Classic Tetris Game</title>
+  <link rel="icon" href="tetris.png" type="image/x-icon">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -15,6 +16,7 @@
         <h1>Classic Tetris Game</h1>
         <p>Use arrow keys <i class="fas fa-arrow-left"></i> <i class="fas fa-arrow-down"></i> <i class="fas fa-arrow-right"></i> to move the tetrominoes.</p>
         <p>Use buttons 'A' and 'S' to rotate the tetrominoes. </p>
+        <div class="created_by">Created with <i class="far fa-heart"></i> by Renata <i class="far fa-smile-beam"></i> </div>
       </div>
       <div class="col-sm">
         <canvas id="tetris" width="336" height="560"></canvas>
